--- a/Neural Network/Neural Network.csproj
+++ b/Neural Network/Neural Network.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="ActivationType.cs" />
     <Compile Include="BackPropagation.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="GeneticAlgorithm.cs" />
     <Compile Include="NeuralNetwork.cs" />
     <Compile Include="ParticleSwarmOptimisation.cs" />
